--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1680,8 +1680,8 @@
     <!-- Nfc developer settings: The description of the setting to enable nfc verbose vendor log. [CHAR_LIMIT=NONE] -->
     <string name="nfc_verbose_vendor_log_summary">Include additional device-specific vendor logs in bugreports, which may contain private information. </string>
     <!-- Nfc developer settings: The title of the setting to enable full nfc snoop log. [CHAR LIMIT=60] -->
-    <string name="nfc_snoop_log_title">NFC NCI unfiltered snoop log</string>
-    <!-- Nfc developer settings: The description of the setting to enable full nfc snoop log. [CHAR_LIMIT=NONE] -->
+    <string name="nfc_snoop_log_title">NFC NCI unfiltered log</string>
+    <!-- Nfc developer settings: The description of the setting to enable full nfc nci log. [CHAR_LIMIT=NONE] -->
     <string name="nfc_snoop_log_summary">Capture detail NFC packets, which may contain private information. </string>
     <!-- Nfc developer settings: The title of the popup dialog. [CHAR_LIMIT=60] -->
     <string name="nfc_reboot_dialog_title">Restart Device?</string>
